--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <script src="assets/css/style.css"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -30,6 +28,9 @@
         <div class="row">
             <div class="col-sm-2">
                 Random number Generated: <span id="RandomNum1"></span>
+                <span id= "Total Score">
+
+                </span>
             </div>
             <div class="col-sm-1">
                 <div class="wins">Wins: <span id="wins"></span></div>
